--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/var-dumper": "5.3.*",
         "symfony/yaml": "5.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+      "ext-http": "*"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.33",
